--- a/src/Feature/Demo/code/packages.config
+++ b/src/Feature/Demo/code/packages.config
@@ -8,6 +8,18 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
+  <package id="Sitecore.Analytics.Core.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Analytics.Model.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Analytics.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.CES.DeviceDetection.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.CES.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Cintel.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.ExperienceEditor.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Automation.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Marketing.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Taxonomy.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Mvc.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net462" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net462" />
